--- a/KAIF/index.html
+++ b/KAIF/index.html
@@ -21,14 +21,40 @@
             }
             .box{
                 border-style:ridge;
-                padding: 10px 20px;
+                padding: 20px;
                 background-color: rgba(255, 255, 255, 0.13);
             }
             .image{
             }
-            .one,.two,.three,.four{
+            
+            section{
+                margin-top: 5px;
+                background-color: rgba(255, 255, 255, 0.13);
+                border-radius: 30px;
+                max-width: 360px;
                 padding: 10px;
             }
+           /*.one :hover{
+                background-color: hsl(216, 50%, 16%);
+                border-radius: 20px;
+                width: 360px;
+                padding: 10px;
+            }
+            .two :hover{
+                width: 360px;
+                background-color: rgba(255, 255, 255, 0.13);
+                border-radius: 20px;
+            }
+            .three :hover{
+                width: 360px;
+                background-color: rgba(255, 255, 255, 0.13);
+                border-radius: 20px;
+            }
+            .four :hover{
+                width: 360px;
+                background-color: rgba(255, 255, 255, 0.13);
+                border-radius: 20px;
+            }*/
             a{
                 text-decoration: none;
                 color: antiquewhite;
@@ -39,8 +65,12 @@
             .name{
                 background-color: hsl(216, 50%, 16%);
                 color: azure;
-                padding: 4px;
+                padding: 5px;
                 border-style: outset;
+            }
+            .new{
+                color: aqua;
+                font-size: 12px;
             }
         </style>
     </head>
@@ -54,24 +84,44 @@
             </div>
                 <br>
             <div class="name">Mohammad Kaif Raza K Ansari</div>
-            <br>
+            <br><cap class="new">(This IS my lINKTREE)</cap> 
             <div class="box">
+
+                <a  href="https://www.linkedin.com/in/kaif-raza-a17346221" >
                 <section class="one">
+                    <box>
                     <img style="height:15%; width: 15%; margin-bottom:-13px; margin-right: -12px;" src="in1.png">
-                <a  href="https://www.linkedin.com/in/kaif-raza-a17346221" >LinkedIn</a><br>
+                LinkedIn<br>
+                    </box>
                 </section>
+                 </a>
+
+                <a  href="https://instagram.com/md_kaifraza_492">
                 <section class="two">
+                    <box>
                     <img style="height:15%; width: 15%; margin-bottom:-13px; margin-right: -15px;" src="inst1.png">
-                <a  href="https://instagram.com/md_kaifraza_492?igshid=YmMyMTA2M2Y=">Instagram</a><br>
+                Instagram<br>
+                    </box>
                 </section>
-                <section class="three">  
+                 </a>
+
+                <a  href="https://github.com/kr492">
+                <section class="three">
+                    <box>  
                     <img style="height:10%; width: 10%; margin-bottom:-13px; margin-right: -8px;" src="gh1.png">
-                <a  href="https://github.com/kr492">Github</a><br>
+                Github<br>
+                    </box>
                 </section>
+                </a>
+
+                <a  href="https://twitter.com/KaifRaz32991038">
                 <section class="four">
+                    <box>
                     <img style="height:15%; width: 15%; margin-bottom:-13px; margin-right: -12px;" src="twtr1.png">
-                <a  href="https://twitter.com/KaifRaz32991038">Twitter</a>
+                Twitter
+                    </box>
                 </section>
+                </a>
             </div>
         </div>
     </center>
